--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -65,7 +65,7 @@
                                     <div class="mt-2">
                                         <textarea id="additionalInfo" name="additionalInfo" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"><%= doctor.additionalInfo || '' %></textarea>
                                     </div>
-                                    <p class="mt-3 text-sm leading-6 text-gray-600">Birkaç cümle yazınız ve klinikleriniz hakkında.</p>
+                                    <p class="mt-3 text-sm leading-6 text-gray-600">Ein paar Sätze über Sie und Ihre Praxis.</p>
                                 </div>
 
                                 <!-- Bildergalerie -->
@@ -337,6 +337,20 @@
                 });
             });
         }
+        
+        // Automatisches Übermitteln des Formulars beim Ändern des Fotos
+        document.getElementById('photo').addEventListener('change', function() {
+            if (this.files.length > 0) {
+                this.closest('form').submit();
+            }
+        });
+        
+        // Automatisches Übermitteln des Formulars beim Hochladen von Galeriefotos
+        document.getElementById('galleryPhoto').addEventListener('change', function() {
+            if (this.files.length > 0) {
+                this.closest('form').submit();
+            }
+        });
     </script>
 </body>
 </html> 
