--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,8 @@
 
     <!-- Hero Section -->
     <div class="relative isolate">
-        <div class="mx-auto max-w-7xl px-6 py-32 sm:py-40 lg:px-8">
-            <div class="text-center space-y-12 mt-16">
+        <div class="mx-auto max-w-7xl px-6 py-16 sm:py-20 lg:px-8">
+            <div class="text-center space-y-12 mt-8">
                 <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">
                     <% if (lang === 'tr') { %>
                         Türkçe konuşan doktorları
@@ -54,8 +54,9 @@
                         </span>
                     <% } %>
                 </h1>
-                <p class="mt-16 text-xl leading-8 text-gray-600 max-w-2xl mx-auto">
-                    <%= t('hero.subtitle').replace('Ärzt:innen', 'Ärzt:innen<br>') %>
+                <p class="mt-8 text-xl leading-8 text-gray-600 max-w-2xl mx-auto">
+                    Verbinden Sie sich mit türkischsprachigen
+                    Ärzt:innen in Wien und ganz Österreich
                 </p>
             </div>
         </div>
